--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -164,6 +164,19 @@ img {
   transition: padding .5s ease-in-out;
 }
 
+/* Center the navbar */
+.navbar-custom {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
+.navbar-custom .navbar-nav {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
 .navbar-custom,
 .navbar-custom.top-nav-short,
 .navbar-custom.top-nav-short-permanent {
@@ -205,7 +218,8 @@ img {
 
 .navbar-custom .navbar-nav .nav-item {
   text-transform: uppercase;
-  font-size: 0.8125rem;
+/*  font-size: 0.8125rem;*/
+  font-size: 1.0rem;
   letter-spacing: 0.0625rem;
 }
 
@@ -254,8 +268,8 @@ img {
   }
 
   .navbar-expand-xl .navbar-nav .nav-link {
-    padding-left: 0.9375rem;
-    padding-right: 0.9375rem;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
   }
 
   .navbar-expand-xl .navbar-nav .nav-item:not(.dropdown):last-child .nav-link {
@@ -1123,3 +1137,82 @@ pre {
     display: inline-block;
   }
 }
+
+.personal-image {
+  display: flex;
+  justify-content: flex-start; /* Aligns items to the left (horizontally) */
+/*  align-items: flex-start; /* Aligns items to the top (vertically) */*/
+  margin: 20px 0;
+}
+
+.personal-image img {
+  width: 35%;  Makes the image responsive 
+  max-width: 300px;  Sets a maximum width 
+  margin: 20px auto;
+/*  display: block;*/
+}
+
+.figure-text {
+  max-width: 100%; /* Limits the width of the text area */
+  margin: 0 0 0 20px;
+}
+
+.figure-text p {
+  margin: 0; /* Adjusts the space for the paragraph */
+}
+
+.custom-hr {
+  border: solid #EAEAEA; /* Remove the default border */
+  height: 2px; /* Set the height of the line */
+  background-color: #EAEAEA; /* Change the color of the line */
+  width: 100%; /* Set the width of the line */
+  margin: 50px auto; /* Center the line and add spacing */
+}
+
+.publication-box{
+  margin: -20px 0; /* Space between publications */
+}
+
+.publication-box h2{
+  margin: 0 0 40px 0; /* Space between publications */
+}
+
+.publication {
+  display: flex;
+  align-items: flex-start; /* Align items to the top */
+  margin: 0 0 40px 0; /* Space between publications */
+}
+
+.publication-image {
+  width: 300px; /* Set the width of the image */
+  height: 200px; /* Maintain aspect ratio */
+  margin-right: 20px; /* Space between the image and the text */
+  border: 3px solid #EAEAEA; /* Border thickness and color */
+  border-radius: 5px; /* Optional: rounded corners */
+  padding: 5px; /* Optional: space between the border and the image */
+}
+
+
+.publication-details {
+  max-width: 100%; /* Limit the width of the text block */
+}
+
+.publication-details h3 {
+  margin: 0 0 10px 0; /* Add space below the title */
+}
+
+.publication-details p {
+  margin: 0; /* No additional margin for the paragraph */
+}
+
+.abstracts-image {
+  width: 300px; /* Set the width of the image */
+  height: 200px; /* Maintain aspect ratio */
+  margin-right: 20px; /* Space between the image and the text */
+  border: 3px solid #EAEAEA; /* Border thickness and color */
+  border-radius: 5px; /* Optional: rounded corners */
+  padding: 5px 30px 5px 30px; /* Optional: space between the border and the image */
+}
+
+
+
